--- a/index.html
+++ b/index.html
@@ -1,34 +1,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>JAVASCRIPT</title>
-        <link rel="stylesheet" href="css/reset.css">
+        <title>Artesanos sistemas facturación</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="header"><h1>Zenva Love</h1></div>
-        <div id="main">
-            <div class="row">
-                <div class="row">
-                    <Label>Gender</Label>
-                    <select id="gender">
-                        <option value="F">Female</option>
-                        <option value="M">Male</option>
-                        <option value="A">All</option>
-                    </select>
-                </div>
-                <div class="row">
-                    <label>Hobbies</label>
-                    <input type="text" id="hobby">
-                </div>
-                <div class="row">
-                    <Button id="searchBtn">Search</Button>
-                </div>
-            </div>
-            <div id="results">
-                
-            </div>
-        </div>
-        <script src="js/script.js"></script>
+        <header>
+            <nav class="nav-bar">
+                <ul>
+                    <li>
+                        Hola
+                    </li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
